--- a/index.html
+++ b/index.html
@@ -12,5 +12,19 @@
     <h1>Formatter</h1>
     <button id='fillForm'>Add Template</button>
     <script src='action.js'></script>
+    <div id="template"></div>
+    <script>
+      var codeBlock =
+      <div class="content">+
+        '<p><strong>Objective(s):</strong></p>'+
+        '<p><br></p>'+
+        '<p><strong>Meeting Coordinator:</strong></p>'+
+        '<p><br></p>' +
+        '<p><strong>Subject Matter Expert(s):</strong></p>'+
+        '<p><br></p>'+
+        '<p><strong>Meeting Material:</strong><br><br></p>'
+      </div>;
+      document.getElementById("template").innetHTML = codeBlock
+    </script>
   </body>
 </html>
