working with formatting

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>Formatter</h1>
     <button id='fillForm'>Add Template</button>
+    <div id="blockOfStuff"></div>
     <script src='action.js'></script>
   </body>
 </html>
