--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html>
   <head>
     <style>
-      html, body {
-        height: 100px;
-        width: 200px
-      }
+        body
+        {
+            font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+            font-size: 100%;
+        }
+        #notification-ext
+        {
+            width: 300px;
+        }
     </style>
   </head>
-  <body>
-    <h1>Formatter</h1>
+<body>
+  <h1 id="notification-ext">Template Form</h1>
+  <form id="templateform">
+    <p>
+      <label for="template">Paste HTML here.</label><br />
+      <textarea id="template" name="template" rows="6" cols="35" placeholder="This text will be saved"></textarea>
+    </p>
+  </form>
+  <p>
     <button id='fillForm'>Add Template</button>
-    <script src='action.js'></script>
-  </body>
+  </p>
+</body>
+  <script src='action.js'></script>
 </html>
