--- a/popup.html
+++ b/popup.html
@@ -14,15 +14,18 @@
     </style>
   </head>
 <body>
-  <h1 id="notification-ext">Template Form</h1>
+  <h2 id="notification-ext">Bullet Points</h2>
   <form id="templateform">
     <p>
-      <label for="template">Paste HTML here.</label><br />
-      <textarea id="template" name="template" rows="6" cols="35" placeholder="This text will be saved"></textarea>
+      <label for="template">Choose your topics:</label><br />
+      <input id="userInput1">1</input>
+      <input id="userInput2">2</input>
+      <input id="userInput3">3</input>
+      <input id="userInput4">4</input>
     </p>
   </form>
   <p>
-    <button id='fillForm'>Add Template</button>
+    <button id='fillForm'>Save</button>
   </p>
 </body>
   <script src='action.js'></script>
