--- a/popup.html
+++ b/popup.html
@@ -30,8 +30,9 @@
     <button id='fillForm'>Insert Template</button>
     <button id="saveTemplate">Save Template</button>
   </p>
-  <p>My Templates</p> 
+  <p>My Templates</p>
 </body>
   <script src='action.js'></script>
+  <script src='popup.js'></script>
 </div>
 </html>
